--- a/sbs-parent/SBSPortalScheduler/pom.xml
+++ b/sbs-parent/SBSPortalScheduler/pom.xml
@@ -13,8 +13,10 @@
 	<name>SBSPortalScheduler</name>
 	<packaging>war</packaging>
 	<url>http://maven.apache.org</url>
-
-
+	
+	<build>
+		<finalName>SBSPortalScheduler</finalName>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -31,19 +33,6 @@
 		<!-- <artifactId>quartz-jobs</artifactId> -->
 		<!-- <version>2.2.0</version> -->
 		<!-- </dependency> -->
-		<!-- JPA -->
-		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>jta</artifactId>
-		</dependency>
 
 		<!-- JPA --> 
 		<dependency>
