--- a/sbs-parent/pom.xml
+++ b/sbs-parent/pom.xml
@@ -9,6 +9,7 @@
   <modules>
     <module>SBSPortalScheduler</module>
     <module>SBSSharedlib</module>
+    <module>SBSWSTasas</module>
   </modules>
   
   <properties>
@@ -74,7 +75,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.4.1.RELEASE</version>
+			<version>1.2.1.RELEASE</version>
 		</dependency>
 		<!-- JPA Provider -->
 		<dependency>
