--- a/sbs-parent/SBSWSTasas/pom.xml
+++ b/sbs-parent/SBSWSTasas/pom.xml
@@ -138,5 +138,19 @@
     
   <build>
     <finalName>SBSWSTasas</finalName>
+    <plugins>
+    	<plugin>
+    		<groupId>org.apache.tomcat.maven</groupId>
+        	<artifactId>tomcat7-maven-plugin</artifactId>
+        	<version>2.1</version>
+    		<configuration>
+    			<server>TomcatServer</server>
+    			<url>http://localhost:8080/manager/text</url>
+    			<path>/SBSWSTasas</path>
+    		</configuration>    	
+    	</plugin>
+    
+    </plugins>
+    
   </build>
 </project>
