--- a/sbs-parent/SBSWSTasas/pom.xml
+++ b/sbs-parent/SBSWSTasas/pom.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <!-- 
+  Pom configuration for Tomcat 7:
+  JAX-WS 2.2.8, JAX-RS 2.0, SPRING 3.1.1, JPA 1.0.1
+   -->
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>sbs-parent</artifactId>
@@ -25,6 +29,23 @@
 		  	<artifactId>jaxws-rt</artifactId>
 		  	<version>2.2.8</version>	  			
 		</dependency>
+		
+	<!-- JAX-RS -->
+	<dependency>
+		<groupId>javax.ws.rs</groupId>
+		<artifactId>javax.ws.rs-api</artifactId>
+		<version>2.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.glassfish.jersey.containers</groupId>
+		<artifactId>jersey-container-servlet</artifactId>
+		<version>2.6</version>
+	</dependency>		
+	<dependency>
+		<groupId>org.glassfish.jersey.ext</groupId>
+		<artifactId>jersey-spring3</artifactId>
+		<version>2.6</version>
+	</dependency>	
 		
     <dependency>
       <groupId>org.jvnet.jax-ws-commons.spring</groupId>
@@ -51,10 +72,11 @@
           		<groupId>org.jvnet.staxex</groupId>
      			<artifactId>stax-ex</artifactId>
        	  </exclusion>
-<!--        	  <exclusion> -->
-<!--           		<groupId>org.jvnet.staxex</groupId> -->
-<!--      			<artifactId>stax-api</artifactId> -->
-<!--        	  </exclusion>         	         	         	                   -->
+       	  <exclusion>
+			  <groupId>javax.servlet</groupId>
+			  <artifactId>servlet-api</artifactId>
+       	  </exclusion>
+
       </exclusions>
     </dependency>
       		
@@ -77,24 +99,18 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-asm</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework</groupId> -->
-<!-- 			<artifactId>spring-beans</artifactId> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework</groupId> -->
-<!-- 			<artifactId>spring-context-support</artifactId> -->
-<!-- 		</dependency> -->
-	
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.data</groupId> -->
-<!-- 			<artifactId>spring-data-jpa</artifactId> -->
-<!-- 		</dependency> -->
+
 		<!-- JPA Provider -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
