--- a/sbs-parent/SBSWSTasas/pom.xml
+++ b/sbs-parent/SBSWSTasas/pom.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <!-- 
-  Pom configuration for Tomcat 7:
-  JAX-WS 2.2.8, JAX-RS 2.0, SPRING 3.1.1, JPA 1.0.1
-   -->
+
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>sbs-parent</artifactId>
@@ -23,34 +20,34 @@
       <scope>test</scope>
     </dependency>
 	
-        <!-- JAX-WS --> 
-		<dependency>
-		  	<groupId>com.sun.xml.ws</groupId>
-		  	<artifactId>jaxws-rt</artifactId>
-		  	<version>2.2.8</version>	  			
-		</dependency>
+    <!-- JAX-WS --> 
+	<dependency>
+	  	<groupId>com.sun.xml.ws</groupId>
+	  	<artifactId>jaxws-rt</artifactId>	  			
+	</dependency>
 		
 	<!-- JAX-RS -->
 	<dependency>
 		<groupId>javax.ws.rs</groupId>
 		<artifactId>javax.ws.rs-api</artifactId>
-		<version>2.0</version>
 	</dependency>
 	<dependency>
 		<groupId>org.glassfish.jersey.containers</groupId>
 		<artifactId>jersey-container-servlet</artifactId>
-		<version>2.6</version>
 	</dependency>		
 	<dependency>
 		<groupId>org.glassfish.jersey.ext</groupId>
 		<artifactId>jersey-spring3</artifactId>
-		<version>2.6</version>
-	</dependency>	
+	</dependency>
+	<dependency>
+		<groupId>org.glassfish.jersey.media</groupId>
+		<artifactId>jersey-media-moxy</artifactId>
+	</dependency>
 		
+	<!-- Spring -->	
     <dependency>
       <groupId>org.jvnet.jax-ws-commons.spring</groupId>
       <artifactId>jaxws-spring</artifactId>
-      <version>1.9</version>
       <exclusions>
 		  <exclusion>
            		<groupId>org.springframework</groupId>
