--- a/sbs-parent/SBSWSTasas/src/main/resources/log4j.properties
+++ b/sbs-parent/SBSWSTasas/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stdout.layout.conversionPattern=%5p [%t] (%F:%L) - %m%n
 
 # Direct log messages to a log file
 log4j.appender.filewarn=org.apache.log4j.RollingFileAppender
-log4j.appender.filewarn.File=C:\\errorlog.log
+log4j.appender.filewarn.File=/logs/errorlog.log
 log4j.appender.filewarn.layout=org.apache.log4j.PatternLayout
 log4j.appender.filewarn.Threshold= WARN
 #log4j.appender.file.MaxFileSize=1MB
@@ -13,6 +13,6 @@ log4j.appender.filewarn.Threshold= WARN
 #log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 log4j.appender.fileinfo=org.apache.log4j.RollingFileAppender
-log4j.appender.fileinfo.File=C:\\sbslog.log
+log4j.appender.fileinfo.File=/logs/sbslog.log
 log4j.appender.fileinfo.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileinfo.Threshold= INFO
